// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug2.png"
  />
</div>
`;

exports[`ProductImage debe de mostrar el componente correctamente con la imagen 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="./imagePrueba"
/>
`;
